[package]
name = "generic_dungen_rooms"
version = "0.1.0"
authors = ["MouseProducedGames <largemouse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic_dungen_rooms_abstract = { path = "../generic_dungen_rooms_abstract" }