[package]
name = "dungen_minion_rooms"
version = "0.1.4"
authors = ["MouseProducedGames <largemouse@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Abstract room support for dungen_minion."
homepage = "https://github.com/MouseProducedGames/dungen_minion_rooms"
repository = "https://github.com/MouseProducedGames/dungen_minion_rooms"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dungen_minion_rooms_abstract = "0.1.6"